@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
                 version="1.0">  
+
+  <xsl:import href='utils.xsl'/>
   <xsl:output method="html" indent="yes"/>
 
+
+
   <xsl:template match="/">
+    <xsl:call-template name='writeWarningMessage'/>
     <html>
 
     <head>
