@@ -94,6 +94,29 @@
 
 		          <h3>News</h3>
 
+			  <p><i>21/March/2010</i>: Venice 0.72beta released</p>
+
+			  <p>This release includes some extra functionality and also fixes bugs which have been accumulating in the source repository. </p>
+
+			  <p>The bugs fixed include:
+			    <ul>
+			      <li>Genetic Algorithm processing</li>
+			      <li>Exceptions thrown when user clicked in the background</li>
+			      <li>Exporting MetaStock quotes in locales which use commas as decimal points</li>
+			      <li>Point and Figure initial chart direction</li>			              <li>Other miscellaneous bugs</li>
+			    </ul>
+			  </p>
+
+			  <p>The extra functions include: 
+			    <ul>
+			      <li>Support for downloading of quotes from <a href="finance.google.com">Google Finance</a></li>
+			      <li>The ability for Venice to restore the position and contents of windows upon restart</li>
+			      <li>Improved the performance of Advance/Decline Market Indicator when the quote source is an external (SQL) database.</li>
+			      <li>The ability to revert the horizontal orientation of charts.</li>
+			      <li>Added Fibonacci Indicator</li>			      
+			    </ul>
+			  </p>
+
 		          <p><i>11/June/2008</i>: Launch of new website - venice.org.nz</p>                          
 
 		          <p><i>25/February/2007</i>: Venice 0.71beta released</p>
